--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-name: Test Wiki
-markdown: kramdown
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+title: "" # the name of your site, e.g. ACME Corp.
 theme: jekyll-theme-architect
